<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueish"
    tools:context=".QrGen">



    <TextView
        android:id="@+id/tvGenQRBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/gen_qr_btn_txt"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:background="@drawable/ripple_darkgray_round"
        android:drawableLeft="@drawable/layer_list_qr_ic"
        android:drawableTint="@color/white"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvGenBCBtn"/>
    <TextView
        android:id="@+id/tvGenBCBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/gen_bc_btn_txt"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:background="@drawable/ripple_darkgray_round"
        android:drawableLeft="@drawable/layer_list_bc_ic"
        android:drawableTint="@color/white"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvGenQRBtn"/>
    <Switch
        android:id="@+id/switch1"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center|right"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/dark_gray"
        android:text="@string/switch_text"
        android:theme="@style/switchTheme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTextToGenerate"/>
    <EditText
        android:id="@+id/etTextToGenerate"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:background="@drawable/shape_white_round_big"
        android:hint="@string/gen_et_hint"
        android:textColorHint="@color/regular_gray"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik_regular_italic"
        android:textSize="16dp"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@id/tvGenDesc"/>
    <TextView
        android:id="@+id/tvGenDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/gen_act_description"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_bold"
        android:textSize="20dp"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_white_round_big"
        app:layout_constraintTop_toBottomOf="@id/tvGenQRBtn"
        app:layout_constraintBottom_toTopOf="@id/adViewQRBC">
        <TextView
            android:id="@+id/tvSaveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/save_img_btn"
            android:textSize="16dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/white"
            android:background="@drawable/ripple_darkgray_round"
            android:drawableLeft="@drawable/ic_download_24"
            android:drawableTint="@color/white"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:clickable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clQRBC"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSaveBtn">
            <ImageView
                android:id="@+id/ivQRBC"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvTextlabel"/>
            <TextView
                android:id="@+id/tvTextlabel"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text=""
                android:fontFamily="@font/rubik_regular"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/ivQRBC"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewQRBC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_unit_01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>