<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_blue_round_big"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDiaResHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_result_header_text"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="@font/rubik_regular"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvDiaResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvDiaResHeader"
        android:background="@drawable/shape_white_round"
        android:text="text here\ntext here"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/dark_gray"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvGotoLink"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/goto_result"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:background="@drawable/ripple_darkgray_round"
        android:drawableLeft="@drawable/layer_list_web_ic"
        android:drawableTint="@color/white"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/tvCopyToCB"
        app:layout_constraintBottom_toBottomOf="@id/tvCopyToCB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvCopyToCB"/>
    <TextView
        android:id="@+id/tvCopyToCB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/copy_to_cb_btn"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:background="@drawable/ripple_darkgray_round"
        android:drawableLeft="@drawable/layer_list_copy_ic"
        android:drawableTint="@color/white"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/tvDiaResultText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvGotoLink"/>
    <TextView
        android:id="@+id/tvClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/close_result"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:background="@drawable/ripple_darkgray_round"
        android:drawableLeft="@drawable/ic_cancel_24"
        android:drawableTint="@color/white"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/tvCopyToCB"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>